--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,24 @@
 {
   "packageDirectories": [
     {
-      "path": "adyen-appexchange",
-      "default": true
+      "path": "force-app",
+      "default": true,
+      "package": "Adyen Payments for B2B Lightning 1.0.0",
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
+      "definitionFile": "config/project-scratch-def.json",
+      "dependencies": [
+        {
+          "package": "04t4T000001HohPQAS"
+        }
+      ]
     }
   ],
+  "name": "adyen-b2bl-commerceapp",
   "namespace": "adyen_payment",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "51.0"
+  "sourceApiVersion": "55.0",
+  "packageAliases": {
+    "Adyen Payments for B2B Lightning 1.0.0": "0Ho4T000000XZDpSAO"
+  }
 }
