--- a/adyen-appexchange/sfdx-project.json
+++ b/adyen-appexchange/sfdx-project.json
@@ -7,6 +7,7 @@
             "versionName": "ver 0.1",
             "versionNumber": "0.1.0.NEXT",
             "definitionFile": "config/project-scratch-def.json",
+            "ancestorVersion": "HIGHEST",
             "dependencies": [
                 {
                     "package": "API Library Apex Adyen@2.0.0-0"
@@ -20,6 +21,7 @@
     "sourceApiVersion": "55.0",
     "packageAliases": {
         "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
+        "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
         "API Library Apex Adyen@2.0.0-0": "04t4T000001HohPQAS"
     }
 }
