--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,27 +1,28 @@
 {
-    "packageDirectories": [
+  "packageDirectories": [
+    {
+      "path": "force-app",
+      "default": true,
+      "package": "Adyen Payments for B2B Lightning",
+      "versionName": "version 2.0",
+      "versionNumber": "2.0.0.NEXT",
+      "definitionFile": "config/project-scratch-def.json",
+      "ancestorVersion": "HIGHEST",
+      "dependencies": [
         {
-            "path": "force-app",
-            "default": true,
-            "package": "Adyen Payments for B2B Lightning",
-            "versionName": "version 2.0",
-            "versionNumber": "2.0.0.NEXT",
-            "definitionFile": "config/project-scratch-def.json",
-            "ancestorVersion": "HIGHEST",
-            "dependencies": [
-                {
-                    "package": "API Library Apex Adyen@3.1.0-1"
-                }
-            ]
+          "package": "API Library Apex Adyen@3.1.0-1"
         }
-    ],
-    "name": "adyen-b2b-lightning-2GP",
-    "namespace": "adyen_payment",
-    "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "59.0",
-    "packageAliases": {
-        "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
-        "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
-        "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC"
+      ]
     }
+  ],
+  "name": "adyen-b2b-lightning-2GP",
+  "namespace": "adyen_payment",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "59.0",
+  "packageAliases": {
+    "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
+    "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
+    "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
+    "Adyen Payments for B2B Lightning@2.0.0-1": "04tRP0000000DBlYAM"
+  }
 }
