--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,7 @@
 {
   "orgName": "Adyen",
   "edition": "Developer",
-  "features": ["MultiCurrency", "Communities", "Sites", "B2BCommerce", "EnableSetPasswordInApi"],
+  "features": ["MultiCurrency", "Communities", "B2BCommerce", "EnableSetPasswordInApi"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
@@ -10,7 +10,8 @@
       "enableExperienceBundleMetadata": true
     },
     "communitiesSettings": {
-      "enableNetworksEnabled": true
+      "enableNetworksEnabled": true,
+      "enableOotbProfExtUserOpsEnable": true
     },
     "orderSettings": {
       "enableOrders": true,
