--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -23,7 +23,6 @@
     "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
     "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
     "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
-    "Adyen Payments for B2B Lightning@2.0.0-1": "04tRP0000000DBlYAM",
-    "Adyen Payments for B2B Lightning@2.0.0-2": "04tRP0000000DIDYA2"
+    "Adyen Payments for B2B Lightning@2.0.0-7": "04tRP0000000DuvYAE"
   }
 }
