fix: applying security review, FLS on Log Entry object

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -23,6 +23,6 @@
     "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
     "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
     "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
-    "Adyen Payments for B2B Lightning@2.0.0-7": "04tRP0000000DuvYAE"
+    "Adyen Payments for B2B Lightning@2.0.0-8": "04tRP0000000EB3YAM"
   }
 }
