--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,7 +5,7 @@
       "default": true,
       "package": "Adyen Payments for B2B Lightning",
       "versionName": "version 2.0",
-      "versionNumber": "2.0.0.NEXT",
+      "versionNumber": "2.1.0.NEXT",
       "definitionFile": "config/project-scratch-def.json",
       "ancestorVersion": "HIGHEST",
       "dependencies": [
@@ -23,6 +23,6 @@
     "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
     "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
     "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
-    "Adyen Payments for B2B Lightning@2.0.0-9": "04tRP0000000EJ7YAM"
+    "Adyen Payments for B2B Lightning@2.1.0-2": "04tRP0000000EsbYAE"
   }
 }
