feat: new release configuration files

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,13 +4,13 @@
       "path": "force-app",
       "default": true,
       "package": "Adyen Payments for B2B Lightning",
-      "versionName": "version 2.1",
-      "versionNumber": "2.1.0.NEXT",
+      "versionName": "version 2.2",
+      "versionNumber": "2.2.0.NEXT",
       "definitionFile": "config/project-scratch-def.json",
       "ancestorVersion": "HIGHEST",
       "dependencies": [
         {
-          "package": "API Library Apex Adyen@3.1.0-1"
+          "package": "API Library Apex Adyen@3.1.1-1"
         }
       ]
     }
@@ -20,9 +20,10 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "59.0",
   "packageAliases": {
-    "API Library Apex Adyen@3.1.0-1": "04tRP0000000D25YAE",
+    "API Library Apex Adyen@3.1.1-1": "04tRP0000000XGvYAM",
     "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
     "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
-    "Adyen Payments for B2B Lightning@2.1.0-4": "04tRP0000000LAvYAM"
+    "Adyen Payments for B2B Lightning@2.1.0-4": "04tRP0000000LAvYAM",
+    "Adyen Payments for B2B Lightning@2.2.0-5": "04tRP0000000YWLYA2"
   }
 }
