--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,13 +4,13 @@
       "path": "force-app",
       "default": true,
       "package": "Adyen Payments for B2B Lightning",
-      "versionName": "version 2.3",
-      "versionNumber": "2.3.0.NEXT",
+      "versionName": "version 2.4",
+      "versionNumber": "2.4.0.NEXT",
       "definitionFile": "config/project-scratch-def.json",
       "ancestorVersion": "HIGHEST",
       "dependencies": [
         {
-          "package": "API Library Apex Adyen@3.2.0-5"
+          "package": "API Library Apex Adyen@3.3.0-1"
         }
       ]
     }
@@ -20,12 +20,13 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "60.0",
   "packageAliases": {
-    "API Library Apex Adyen@3.2.0-5": "04tRP0000000lwbYAA",
+    "API Library Apex Adyen@3.3.0-1": "04tRP0000000vZNYAY",
     "Adyen Payments for B2B Lightning": "0Ho4T000000XZDuSAO",
     "Adyen Payments for B2B Lightning@1.0.0-0": "04t4T000001HohjQAC",
     "Adyen Payments for B2B Lightning@2.1.0-4": "04tRP0000000LAvYAM",
     "Adyen Payments for B2B Lightning@2.2.0-5": "04tRP0000000YWLYA2",
     "Adyen Payments for B2B Lightning@2.2.1-1": "04tRP0000000ajRYAQ",
-    "Adyen Payments for B2B Lightning@2.3.0-3": "04tRP0000000lyDYAQ"
+    "Adyen Payments for B2B Lightning@2.3.0-3": "04tRP0000000lyDYAQ",
+    "Adyen Payments for B2B Lightning@2.4.0-1": "04tRP0000000veDYAQ"
   }
 }
